k8s/prod/polybot.yaml
# k8s/deployment-demo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
  labels:
    app: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
        labels:
          app: polybot
    spec:
      containers:
      - name: server
        image: selotapetm/polybot-cicd-prod:0.0.298
---

apiVersion: v1
kind: Service
metadata:
  name: polybot-svc
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
